feat(network): feature complete network endpoints
